# high-school-python-code-analytics

./: .gitignore  CLAUDE.md  LICENSE  README.md
api/: .dockerignore  .gcloudignore  Dockerfile  README.md  pyproject.toml  ruff.toml
api/examples/: __init__.py  test_visualize_api.py
api/src/: __init__.py  main.py
api/src/routers/: __init__.py  analysis.py  error_analysis.py  visualization.py
api/src/services/: __init__.py  analyzer.py  error_analyzer.py  visualizer.py
mcp/: README.md  pyproject.toml  ruff.toml
mcp/src/: __init__.py  client.py  server.py
web/: .env.local.template  README.md  biome.jsonc  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: AnalysisPanel.tsx  CodeEditor.tsx  ErrorAnalysisPanel.tsx  VisualizationPanel.tsx
web/src/components/ui/: tabs.tsx
web/src/lib/: api-client.ts  api-types.ts
